p1-explo en cours

--- a/p1-exploration-preliminaire.ipynb
+++ b/p1-exploration-preliminaire.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le fichier `summer-olympics.csv` est un fichier ... au format ...  "
+    "Le fichier `summer-olympics.csv` est un fichier texte au format csv"
    ]
   },
   {
@@ -45,11 +45,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "csv"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,11 +59,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "un format texte ouvert représentant des données tabulaires sous forme de valeurs séparées par des virgules."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,11 +73,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "XML / .TXT / "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,11 +87,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "C'est la liste complète des médaillés olympiques (or, argent, bronze) de leur genre, nationnalités, depuis la première édition en 1896 des J.O, jusqu'à celle de Londres en 2012 (manque Rio 2016)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,11 +120,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
-   "source": [
-    "Réponse 6: ..."
-   ]
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-ad5427872d88>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-ad5427872d88>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT COUNT(*) FROM table\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
