P1 explo (2) on avance

--- a/p1-exploration-preliminaire.ipynb
+++ b/p1-exploration-preliminaire.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "csv"
+    "C'est un fichier au format csv"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "un format texte ouvert représentant des données tabulaires sous forme de valeurs séparées par des virgules."
+    "un format texte ouvert représentant des données tabulaires sous forme de valeurs séparées par des virgules. [Wikipédia](https://fr.wikipedia.org/wiki/Comma-separated_values)"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "XML / .TXT / "
+    ".XML / .TXT / .JSON / .XLS"
    ]
   },
   {
@@ -120,20 +120,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-ad5427872d88>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-ad5427872d88>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT COUNT(*) FROM table\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "31165"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,11 +134,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1896 -> 2012"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,31 +148,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
