--- a/p2-exploration-python.ipynb
+++ b/p2-exploration-python.ipynb
@@ -241,9 +241,39 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Year': '2004',\n",
+       " 'City': 'Athens',\n",
+       " 'Sport': 'Aquatics',\n",
+       " 'Discipline': 'Swimming',\n",
+       " 'Athlete': 'MANAUDOU, Laure',\n",
+       " 'Country': 'FRA',\n",
+       " 'Gender': 'Women',\n",
+       " 'Event': '100M Backstroke',\n",
+       " 'Medal': 'Bronze'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "La variable sample représente un échantillon, en locurence ici, c'est la 25215 ème valeur (ligne) de la list data. "
+    "sample"
    ]
   },
   {
