Lundi 02 novembre - reprise projet

--- a/p2-exploration-python.ipynb
+++ b/p2-exploration-python.ipynb
@@ -41,7 +41,7 @@
      "output_type": "stream",
      "text": [
       "data/summer-olympics.csv loaded into data (31165 items)\n",
-      "done in 0.24 s.\n"
+      "done in 0.49 s.\n"
      ]
     }
    ],
@@ -124,9 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31165"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(data)"
    ]
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +168,7 @@
        " 'Medal': 'Gold'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +209,7 @@
     }
    ],
    "source": [
-    "data[31164]"
+    "data[-1]"
    ]
   },
   {
@@ -225,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,16 +252,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +274,7 @@
        " 'Medal': 'Bronze'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +301,7 @@
        "dict"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,24 +318,63 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Aquatics'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Aquatics"
+    "sample[\"Sport\"] "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Swimming'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Swimmings"
+    "sample[\"Discipline\"]"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'100M Backstroke'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "100M backstrokes"
+    "sample[\"Event\"]"
    ]
   },
   {
@@ -339,53 +385,194 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
    "source": [
-    "integer"
+    "count =0\n",
+    "\n",
+    "for item in data :\n",
+    "    if item['Medal'] == 'Gold' and item['Country'] == 'FRA' and item['Year'] == '1984':\n",
+    "        count +=1\n",
+    "   \n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84\n"
+     ]
+    }
+   ],
+   "source": [
+    "count =0\n",
+    "\n",
+    "for item in data :\n",
+    "    if item['Country'] == 'JPN' and item['Year'] == '2012':\n",
+    "        count +=1\n",
+    "   \n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-32-8fb7fbea305a>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-8fb7fbea305a>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    if e2['Country'] is not:\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "selection = []\n",
+    "for e in data:\n",
+    "    if e['Year'] == '2012' and e['Medal'] == 'Gold':\n",
+    "        selection.append(e)\n",
+    "len(selection)\n",
+    "\n",
+    "pays = []\n",
+    "\n",
+    "for e2 in selection:\n",
+    "    if e2['Country'] :\n",
+    "        pays.append(e2)\n",
+    "    \n",
+    "print(len(pays))    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "String"
+    "### Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8419"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selection = []\n",
+    "for e in data:\n",
+    "    if e['Gender'] == 'Women' and e['Medal']:\n",
+    "        selection.append(e)\n",
+    "len(selection)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "string"
+    "### Q4\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2788"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selection = []\n",
+    "for e in data:\n",
+    "    if e['Gender'] == 'Women' and e['Medal'] == 'Gold':\n",
+    "        selection.append(e)\n",
+    "len(selection)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "string"
+    "### Q5"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "string"
+    "selection = []\n",
+    "for e in data:\n",
+    "    if e['Gender'] == 'Women' and e['Medal'] == 'Gold':\n",
+    "        selection.append(e)\n",
+    "len(selection)"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "string"
+    "selection = []\n",
+    "for e in data:\n",
+    "    if e['City'] == 'London' and e['Year'] == '1908':\n",
+    "        selection.append(e)\n",
+    "len(selection)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "string"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -393,6 +580,13 @@
    "source": [
     "### Question i: "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -432,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
