avancement lundi, sql

--- a/p3-exploration-sql.ipynb
+++ b/p3-exploration-sql.ipynb
@@ -103,10 +103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-6c339dee0132>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-6c339dee0132>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT count(*)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "SELECT count(*)\n",
+    "FROM summer;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,10 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-5e16015b88e8>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-5e16015b88e8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT DISTINCT Year, City\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "SELECT DISTINCT Year, City\n",
+    "FROM summer;"
+   ]
   },
   {
    "cell_type": "code",
@@ -166,10 +190,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-5e22a2b0f259>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-5e22a2b0f259>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    --Q12. Quel est l’athlète qui a remporté le plus de médailles d’or ? (mayel)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "--Q12. Quel est l’athlète qui a remporté le plus de médailles d’or ? (mayel)\n",
+    "--(Adaptation au top 10)\n",
+    "SELECT Athlete, Country, count(Medal) as nMedal\n",
+    "FROM summer\n",
+    "GROUP BY Athlete, Country\n",
+    "ORDER BY nMedal DESC\n",
+    "LIMIT 10;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
