P1 terminé, P2 a finir plus tard, a l'attaque de P3

--- a/p1-exploration-preliminaire.ipynb
+++ b/p1-exploration-preliminaire.ipynb
@@ -113,6 +113,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "SELECT count(*)\n",
+    "FROM summer;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```sql\n",
     "-- Question 6\n",
     "\n",
@@ -134,6 +142,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT MIN(Year),\n",
+    "MAX(Year)\n",
+    "FROM summer;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,12 +169,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "SELECT DISTINCT Year, City\n",
+    "FROM summer;"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1896    Athens\n",
+    "1900    Paris\n",
+    "1904    St Louis\n",
+    "1908    London\n",
+    "1912    Stockholm\n",
+    "1920    Antwerp\n",
+    "1924    Paris\n",
+    "1928    Amsterdam\n",
+    "1932    Los Angeles\n",
+    "1936    Berlin\n",
+    "1948    London\n",
+    "1952    Helsinki\n",
+    "1956    Melbourne / Stockholm\n",
+    "1960    Rome\n",
+    "1964    Tokyo\n",
+    "1968    Mexico\n",
+    "1972    Munich\n",
+    "1976    Montreal\n",
+    "1980    Moscow\n",
+    "1984    Los Angeles\n",
+    "1988    Seoul\n",
+    "1992    Barcelona\n",
+    "1996    Atlanta\n",
+    "2000    Sydney\n",
+    "2004    Athens\n",
+    "2008    Beijing\n",
+    "2012    London"
+   ]
   },
   {
    "cell_type": "markdown",
