P1 : OK, P2 : OK (sauf questions), P3 : en cours

--- a/p1-exploration-preliminaire.ipynb
+++ b/p1-exploration-preliminaire.ipynb
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "31165"
+    "Résultat : 31165"
    ]
   },
   {
@@ -142,10 +142,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "SELECT MIN(Year),\n",
     "MAX(Year)\n",
@@ -156,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1896 -> 2012"
+    "Résultat : 1896, 2012"
    ]
   },
   {
@@ -178,6 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Résultat :\n",
     "1896    Athens\n",
     "1900    Paris\n",
     "1904    St Louis\n",
@@ -206,16 +205,6 @@
     "2008    Beijing\n",
     "2012    London"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
