--- a/p3-exploration-sql.ipynb
+++ b/p3-exploration-sql.ipynb
@@ -31,11 +31,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Le SQL (Structured Query Language) est un langage permettant de communiquer avec une base de données"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,11 +45,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "SQLite est un système de base de données qui a la particularité de fonctionner sans serveur, on dit aussi \"standalone\" ou \"base de données embarquée\". On peut l'utiliser avec beaucoup de langages : PHP, Python, C# (.NET), Java, C/C++, Delphi, Ruby...\n",
+    "\n",
+    "inconvénients : \n",
+    "- écritures atomiques (avec SQLite, un seul processus peut écrire dans la base)\n",
+    "- pas de réplication\n",
+    "\n",
+    "avantages : \n",
+    "- très léger et rapide à mettre en place\n",
+    "- stocker des données dans une vraie base de données sur une application pour smartphone (iPhone ou Android), pour une application Windows, ou sur un serveur web.\n",
+    "\n",
+    "# Définition\n",
+    "réplication : La réplication consiste en un transfert des données d'un serveur vers un ou plusieurs autres serveurs SQL."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,11 +70,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    ".SQLITEDB / .DB / .SQLITE3 / .SQL / .XLM"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le fichier `olympics.sqbpro` est un fichier ..."
+    "Le fichier `olympics.sqbpro` est un fichier ... texte"
    ]
   },
   {
@@ -87,11 +98,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Year , City , Sport, Discipline, Athletes, Country, Gender, Event, Medal"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,22 +113,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-6c339dee0132>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-6c339dee0132>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT count(*)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "SELECT count(*)\n",
     "FROM summer;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultat : 31165"
    ]
   },
   {
@@ -128,11 +135,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "SELECT MIN(Year), MAX(Year) FROM summer;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Résultat : 1896, 2012"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,30 +156,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-5e16015b88e8>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-5e16015b88e8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    SELECT DISTINCT Year, City\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "SELECT DISTINCT Year, City\n",
     "FROM summer;"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Résultat : 1896 Athens 1900 Paris 1904 St Louis 1908 London 1912 Stockholm 1920 Antwerp 1924 Paris 1928 Amsterdam 1932 Los Angeles 1936 Berlin 1948 London 1952 Helsinki 1956 Melbourne / Stockholm 1960 Rome 1964 Tokyo 1968 Mexico 1972 Munich 1976 Montreal 1980 Moscow 1984 Los Angeles 1988 Seoul 1992 Barcelona 1996 Atlanta 2000 Sydney 2004 Athens 2008 Beijing 2012 London"
+   ]
   },
   {
    "cell_type": "code",
@@ -189,19 +192,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-5e22a2b0f259>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-5e22a2b0f259>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    --Q12. Quel est l’athlète qui a remporté le plus de médailles d’or ? (mayel)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "--Q12. Quel est l’athlète qui a remporté le plus de médailles d’or ? (mayel)\n",
     "--(Adaptation au top 10)\n",
